# dft-aggregator

./: .clang-format  .envrc  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  compare_raw_vs_aggregated.py  comparison.py  fit_distributions.py  flake.nix  raw_analysis.py  summary.py  summary_table.py
cmake/modules/: Dependencies.cmake
scripts/formatting/: autoformat.sh  check-formatting.sh
src/: aggregation_config.hpp  aggregation_key.hpp  aggregation_metrics.hpp  aggregation_output.hpp  aggregator.hpp  association_merger_utility.hpp  association_resolver_utility.hpp  association_tracker.hpp  chunk_aggregator_utility.hpp  chunk_association_extractor_utility.hpp  chunk_mapper_utility.hpp  event_aggregator_utility.hpp  json_parser_utility.hpp  main.cpp  perfetto_writer.hpp  trace_parser.hpp
